# kbdviz

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  STATUS.md
.claude/commands/: release.md
.github/: release.yml
.github/workflows/: release.yml
scripts/: screenshot.sh
src/: compose.rs  keyboard.rs  main.rs  ui.rs
